--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "demo-submodule-svc1"]
 	path = demo-submodule-svc1
 	url = git@github.com:demo-submodule/demo-submodule-svc1.git
+[submodule "demo-submodule-svc2"]
+	path = demo-submodule-svc2
+	url = git@github.com:demo-submodule/demo-submodule-svc2.git
