--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'demo-submodule-svc2'
 
 include 'demo-submodule-lib'
 include 'demo-submodule-svc1'
+include 'demo-submodule-svc2'
 include 'app'
